--- a/APFTestingUI/Views/Shared/_Layout.cshtml
+++ b/APFTestingUI/Views/Shared/_Layout.cshtml
@@ -47,7 +47,8 @@
                 <div id="content">
                     <div class="size-wrapper">
                         @RenderBody()
-                        <div class="clear"></div>
+                        <!--Commented out because exam summary layout looked horrible with it! (Pradipna) -->
+                       <!-- <div class="clear"></div>-->
                     </div>
                 </div>
                 <footer id="footer">
