--- a/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
+++ b/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
@@ -38,13 +38,13 @@
             <div class="answer-container">
                 @if (Model.NumberOfCorrectAnswers == 1)
                 {
-                    <input type="radio" class="answer-radiobutton" name="ChosenAnswer" value="@answer.DisplayOrderIndex" checked="@answer.IsChecked" />
+                    <input id="ChosenAnswer-@answer.DisplayOrderIndex" type="radio" class="answer-radiobutton" name="ChosenAnswer" value="@answer.DisplayOrderIndex" checked="@answer.IsChecked" />
                 }
                 else
                 {
-                    <input type="checkbox" class="answer-checkbox" name="ChosenAnswer" value="@answer.DisplayOrderIndex" checked="@answer.IsChecked" />
+                    <input id="ChosenAnswer-@answer.DisplayOrderIndex" type="checkbox" class="answer-checkbox" name="ChosenAnswer" value="@answer.DisplayOrderIndex" checked="@answer.IsChecked" />
                 }
-                <span class="Answer-Description">@answer.Description</span>
+                <label for="ChosenAnswer-@answer.DisplayOrderIndex" class="Answer-Description">@answer.Description</label>
                 
             </div>
         }
@@ -66,6 +66,8 @@
         {
             <input id="SummaryButton" class="button" type="button" value="Go to Summary" />
         }
+
+        <input type="button" onclick="answerQuestion()" value="!!TESTING!!" />
 
         <div class="clear"></div>
     </div>
