--- a/APFTestingUI/Views/Shared/_QuestionLayout.cshtml
+++ b/APFTestingUI/Views/Shared/_QuestionLayout.cshtml
@@ -1,28 +1,26 @@
-﻿@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-
-<html>
+﻿<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700,400italic' rel='stylesheet' type='text/css'>
     @Styles.Render("~/Content/css")
     <!--[if lt IE 9]>
-        @Scripts.Render("~/Scripts/html5shiv.js")
-        <![endif]-->
+    @Scripts.Render("~/Scripts/html5shiv.js")
+    <![endif]-->
     @Scripts.Render("~/Scripts/modernizr.custom.51211.js")
 </head>
-
 <body>
     <div id="global-wrapper">
-
         <header id="header">
             <div class="size-wrapper">
                 <div id="logo-area">
-                    <a href="/">
-                        <img src="~/Images/logo-apf.png" alt="Australian Parachute Federation" /></a>
+                    <a href="/"><img src="~/Images/logo-apf.png" alt="Australian Parachute Federation" /></a>
                 </div>
                 <div class="right">
                     <div id="void-area">
@@ -38,12 +36,18 @@
                 </div>
             </div>
         </header>
-
-        <div id="content">
-            <div class="size-wrapper">
-                @RenderBody()
+        <div class="gradient-wrapper">
+            <div id="content">
+                <div class="size-wrapper">
+                    @RenderBody()
+                </div>
             </div>
-
+            <footer id="footer">
+                <div class="size-wrapper">
+                    <p id="copy">&copy; 2013 Australian Parachute Federation</p>
+                    <div class="clear"></div>
+                </div>
+            </footer>
         </div>
 
     </div>
