Modified styling of UI

--- a/APFTestingUI/Views/Shared/_QuestionLayout.cshtml
+++ b/APFTestingUI/Views/Shared/_QuestionLayout.cshtml
@@ -20,7 +20,7 @@
         <header id="header">
             <div class="size-wrapper">
                 <div id="logo-area">
-                    <a href="/"><img src="~/Images/logo-apf.png" alt="Australian Parachute Federation" /></a>
+                    <img src="~/Images/logo-apf.png" alt="Australian Parachute Federation" />
                 </div>
                 <div class="right">
                     <div id="void-area">
