--- a/APFTestingUI/Views/Shared/_Layout.cshtml
+++ b/APFTestingUI/Views/Shared/_Layout.cshtml
@@ -25,8 +25,8 @@
                 <div class="right">
                     <div id="login-area">
                         <ul>
-                            <li><a href="#">Admin Login</a></li>
-                            <li><a href="#">Examiner Login</a></li>
+                            <li><a id="login-admin" href="#">Admin Login</a></li>
+                            <li><a id="login-examiner" href="#">Examiner Login</a></li>
                         </ul>
                     </div>
                 </div>
